.provarCaches/00D410000011HE0EAM/objects/rstk__soshipser__c.object
<CustomObject>
    <description>soshipser__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__soshipser_prod__r.rstk__soprod_prod__c + &apos; &apos; +  rstk__soshipser_eucust__r.rstk__socust_custno__c + &apos; &apos; +  rstk__soshipser_cust__r.rstk__socust_custno__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_cust__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sold to Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>socust_cust_soshipser</relationshipLabel>
        <relationshipName>socust_cust_soshipser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_dateship__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_eucust__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>End User Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>socust_eucust_soshipser</relationshipLabel>
        <relationshipName>socust_eucust_soshipser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line</label>
        <referenceTo>rstk__soshipline__c</referenceTo>
        <relationshipLabel>Shipped Product Serial Details</relationshipLabel>
        <relationshipName>Shipped_Product_Serial_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_price__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_prod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>soprod_prod_soshipser</relationshipLabel>
        <relationshipName>soprod_prod_soshipser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_refserial__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reference S/N</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_serial__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_warrduration__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Warranty Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_warrexpdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soshipser_warrtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Warranty Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Shipped Product Serial Detail</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Shipped_Product_Serial_Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__soshipser_prod__c</columns>
        <columns>rstk__soshipser_line__c</columns>
        <columns>rstk__soshipser_price__c</columns>
        <columns>rstk__soshipser_dateship__c</columns>
        <columns>rstk__soshipser_serial__c</columns>
        <columns>rstk__soshipser_refserial__c</columns>
        <columns>rstk__soshipser_cust__c</columns>
        <columns>rstk__soshipser_eucust__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Shipped Product Serial Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Shipped Product Serial Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipped Product Serial Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>